--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1, h2, h3, h4, h5, h6, p, ul {
+  margin: 0;
+}
+ul {
+  padding-left: 0;
+  list-style: none;
+}
